@@ -299,6 +299,10 @@ CHANGES
     exceptions, "could not receive data from server"
     [ticket:2044]
 
+- mysql
+  - oursql dialect accepts the same "ssl" arguments in 
+    create_engine() as that of MySQLdb.  [ticket:2047]
+
 0.6.6
 =====
 - orm
